config and about

--- a/_posts/2025-04-18-Post1.md
+++ b/_posts/2025-04-18-Post1.md
@@ -1,9 +1,13 @@
 ---
 title: TEST
 date: 2025-04-18 18:09:37 -0400
-categories: [Top Level Category, Sub Category]
-tags: [asdf]     # TAG names should always be lowercase
+category: [articles] # optionally "categories" if there is more than one
+tags: [asdf, tag1, tag2]     # TAG names should always be lowercase
 mermaid: true
+description: Example options which can be used for frontmatter
+toc: true
+comments: true
+published: false
 ---
 
 Some words for reading
